# native-lens-camera

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/java/com/nativelens/camera/: CameraScreen.kt  CameraViewModel.kt  FilterPreset.kt  HistogramView.kt  MainActivity.kt  NativeImageProcessor.kt
app/src/main/java/com/nativelens/camera/ui/theme/: Color.kt  Theme.kt  Type.kt
